# reviews-next

./: .gitignore  CHANGELOG.md  ChangeLog.md  Makefile  README.md  config.dhall  default.nix  package-lock.json  package.json  package.yaml  project.clj  reviews-next.cabal  reviews-next.nix  shadow-cljs.edn  stack.yaml  test.config.dhall
.github/workflows/: clojure.yml
app/: Main.hs  Reviews.hs
app/Reviews/: Config.hs  Html.hs  Utils.hs
app/Reviews/Types/: User.hs
dev/reviews_next/: user.clj  user.cljs
doc/: intro.md
resources/: config.edn  secrets.sample.edn
resources/config/: config.edn
resources/migrations/: 001-create-users.up.sql  002-create-reviews.down.sql  002-create-reviews.up.sql  003-create-user-reviews.down.sql  003-create-user-reviews.up.sql  003-user-reviews.up.sql  004-create-user-feedback.down.sql  004-create-user-feedback.up.sql
resources/public/css/: site.css
resources/public/js/: site.js
resources/web/: index.html
resources/web/assets/css/: site.css
src/: Main.hs  Reviews.hs
src/Reviews/: Config.hs  Database.hs  Effects.hs  Html.hs  Routes.hs  Utils.hs
src/Reviews/Controller/: Pages.hs
src/Reviews/Controllers/: Auth.hs  Pages.hs  Users.hs
src/Reviews/Effects/: OAuth.hs
src/Reviews/Types/: Cache.hs  Common.hs  Config.hs  Review.hs  Timestamps.hs  User.hs
src/Reviews/Views/: Common.hs  Home.hs  Landing.hs  Nav.hs
src/clj/reviews_next/: config.clj  core.clj  db.clj  routes.clj  server.clj
src/clj/reviews_next/db/: core.clj  db_ops.clj  migrations.clj  review_db_ops.clj  reviews.clj  user_db_ops.clj  user_feedback.clj  user_review_db_ops.clj  user_reviews.clj  users.clj
src/clj/reviews_next/handlers/: auth.clj  core.clj  feedback_event.clj  list_feedback_event.clj  pages.clj  post_title_date.clj  review_event.clj  users.clj
src/clj/reviews_next/models/: user.clj
src/clj/reviews_next/views/: home.clj  index.clj  not_found.clj
src/cljs/reviews_next/: components.cljs  core.cljs  db.cljs  events.cljs  routes.cljs  subs.cljs
src/cljs/reviews_next/db/: user.cljs
src/cljs/reviews_next/events/: interceptors.cljs  user.cljs
src/cljs/reviews_next/pages/: base.cljs  feedback_event.cljs  home.cljs  list_draft_feedbacks.cljs  list_feedbacks_provided.cljs  login.cljs  review.cljs  reviewEvent.cljs  review_event.cljs  view_feedback_event.cljs
src/reviews_next/: core.clj  database.clj  middleware.clj  migrations.clj  routes.clj  server.clj
src/reviews_next/components/: common.clj
src/reviews_next/db/: core.clj
src/reviews_next/domain/: user.clj
src/reviews_next/handlers/: core.clj  pages.clj  ping.clj  users.clj
src/reviews_next/views/: home.clj
test/: Fixtures.hs  Spec.hs
test/Fixtures/: MockOAuth.hs
test/Reviews/: AuthSpec.hs  EffectsSpec.hs
test/clj/reviews_next/: core.clj  fixtures.clj
test/clj/reviews_next/db/: reviews_test.clj  user_feedback_test.clj  user_reviews_test.clj  users_test.clj
test/clj/reviews_next/handlers/: feedback_event.clj  review_event_test.clj
test/cljs/reviews_next/: events_test.cljs
test/cljs/reviews_next/events/: user_test.cljs
test/cljs/reviews_next/pages/: review_event.cljs
test/reviews_next/: core_test.clj
test/reviews_next/backend/: review_event_test.clj
test/reviews_next/clj/db/: reviews.clj  users.clj  (+1 more)
test/reviews_next/cljs/: events.cljs  events_test.cljs
test/reviews_next/frontend/: review_event_test.cljs
(+9 files in other folders)
