cabal-version:      2.4
name:               reviews-next
version:            0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
author:             nilenso
maintainer:         govind@nilenso.com
-- copyright:
-- category:
extra-source-files:
  ChangeLog.md,
  README.md

executable reviews-next
    main-is:          Main.hs
    ghc-options:      -Wall
    other-modules:
      Reviews
      Reviews.Config
      Reviews.Html
      Reviews.Types.User
      Reviews.Utils
    build-depends:
      base ^>=4.14.1.0,
      acid-state,
      blaze-html,
      bytestring,
      dhall,
      http-client,
      mtl,
      safecopy,
      servant-blaze,
      servant-server,
      text,
      wai,
      wai-extra,
      warp

    hs-source-dirs:   app
    default-language: Haskell2010
