cabal-version:      2.4
name:               reviews-next
version:            0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
author:             nilenso
maintainer:         govind@nilenso.com
-- copyright:
-- category:
extra-source-files:
  ChangeLog.md,
  README.md

library
  ghc-options: -Wall
  exposed-modules:
    Reviews
    Reviews.Controllers.Auth
    Reviews.Effects.OAuth
    Reviews.Html
    Reviews.Types.Cache
    Reviews.Types.Common
    Reviews.Types.Review
    Reviews.Types.User
    Reviews.Utils
  hs-source-dirs:
    src
  build-depends:
    base ^>=4.14.1.0,
    aeson,
    blaze-html,
    blaze-markup,
    bytestring,
    containers,
    dhall,
    fused-effects,
    gitlib,
    hoauth2,
    http-conduit,
    jwt,
    lens,
    mtl,
    servant-auth-server,
    servant-blaze,
    servant-server,
    stm,
    text,
    time,
    uri-bytestring,
    uuid
  default-language: Haskell2010

executable reviews-next
  main-is: Main.hs
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    base ^>=4.14.1.0,
    reviews-next,
    wai,
    wai-extra,
    warp

  hs-source-dirs:
    app
  default-language: Haskell2010

test-suite reviews-next-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
    Fixtures,
    Fixtures.MockOAuth,
    Reviews.AuthSpec
  hs-source-dirs:
    test
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    base ^>=4.14.1.0,
    aeson,
    containers,
    fused-effects,
    http-api-data,
    http-conduit,
    http-types,
    lens,
    mtl,
    reviews-next,
    servant-server,
    stm,
    tasty,
    tasty-hunit,
    tasty-quickcheck,
    tasty-wai,
    text,
    uri-bytestring,
    wai,
    wai-extra,
    warp
  default-language: Haskell2010
